# patch-file-mcp-fork

./: .gitignore  AGENTS.md  README.md  mcp_config.json  mcp_config_example.json  mcp_config_original.json  pyproject.toml  run_tests.py  test_path_formats.py  test_path_formats_standalone.py  upload.sh
src/patch_file_mcp/: __init__.py  git_repo.py  server.py  server.py.old
tests/: README.md  __init__.py  conftest.py  test_git_versioning.py  test_integration.py  test_patch_file.py  test_path_normalization.py  test_qa_pipeline.py  test_quality.py  test_security.py  test_stdio_logging.py  test_venv_detection.py
